--- a/presentation/ref.bib
+++ b/presentation/ref.bib
@@ -10,6 +10,17 @@
   url     = {https://web.stanford.edu/class/cs231m/project-1/exposure-fusion.pdf}
 }
 
+@article{hessel:ext_fusion,
+  title   = {{Extended Exposure Fusion}},
+  author  = {Hessel, Charles},
+  journal = {{Image Processing On Line}},
+  volume  = {9},
+  pages   = {453--468},
+  year    = {2019},
+  note    = {\url{https://doi.org/10.5201/ipol.2019.278}}
+}
+
+
 @misc{github:arpesenti,
   author       = {arpesenti},
   title        = {Exposure Fusion},
