--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -22,6 +22,7 @@
 \usepackage{stfloats}
 \usepackage{fixltx2e}
 \usepackage{caption}
+\usepackage{microtype}
 \usepackage{subcaption}
 
 \usepackage[export]{adjustbox}
