--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -63,7 +63,7 @@
     \IEEEauthorblockN{Dario Loi}
     \IEEEauthorblockA{(1940849)},
     \IEEEauthorblockN{Flavio Gezzi}
-    \IEEEauthorblockA{(???)}
+    \IEEEauthorblockA{(1958690)}
 }
 
 \IEEEcompsoctitleabstractindextext{%
@@ -244,7 +244,8 @@ presentando allo stesso tempo le stesse limitazioni.
 É infatti noto agli autori originali che il metodo 
 presenta degli artefatti a bassa frequenza quando la profondita delle piramidi Gaussiane e Laplaciane é troppo 
 bassa, questo problema é risolvibile aumentando la profonditá, cio peró aumenta il tempo di computazione e 
-puó risultare in un secondo tipo di artefatto, in cui i valori di intensitá non sono piú presenti nell'intervallo $(0, 1]$.
+puó risultare in un secondo tipo di artefatto, in cui i valori di intensitá non sono piú presenti nell'intervallo $(0, 1]$, 
+questo problema é risolto da metodi piú recenti\cite{hessel:exp_fusion}, ma rimane nella nostra implentazione.
 
 \section{Conclusioni}
 
