--- a/presentation/ref.bib
+++ b/presentation/ref.bib
@@ -10,7 +10,7 @@
   url     = {https://web.stanford.edu/class/cs231m/project-1/exposure-fusion.pdf}
 }
 
-@article{hessel:ext_fusion,
+@article{hessel:exp_fusion,
   title   = {{Extended Exposure Fusion}},
   author  = {Hessel, Charles},
   journal = {{Image Processing On Line}},
